--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .full-page{
   height: 100vh;
   padding-top: 5%;
@@ -16,6 +20,6 @@
 }
 
 .statement-text {
-  padding: 30% 0 ;
+  padding: 20% 0 ;
 
 }
