--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,20 @@
-html {
-  scroll-behavior: smooth;
+
+html,body
+{
+    scroll-behavior: smooth;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: visible;
 }
 
 .full-page{
-  height: 100vh;
   padding-top: 5%;
 }
 
 .personal-description {
-  margin: 10% 0;
+  margin-bottom: 5%;
 }
 
 #personal-statement {
@@ -17,9 +23,9 @@ html {
   background-size: 100% 100%;
   background-color: #cccccc;
   text-align: center;
+  min-height: 100vh;
 }
 
 .statement-text {
-  padding: 20% 0 ;
-
+  padding-top: 10%;
 }
