--- a/css/styles.css
+++ b/css/styles.css
@@ -34,13 +34,14 @@ html,body
 }
 
 .statement-text {
-  padding-top: 15%;
+  padding-top: 10%;
   font-size: 5em;
 }
 
 
 .highlighted {
   background-color: rgba(0,0,0,.65);
+  border-radius: 15px;
 }
 
 #contact-form {
