--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ html,body
     margin: 0px;
     padding: 0px;
     overflow-x: visible;
+    font-size: 1em;
 }
 
 .full-page{
@@ -18,6 +19,14 @@ html,body
   margin-bottom: 5%;
 }
 
+#personal-projects {
+  margin-top: -5%;
+}
+
+#main-content {
+  font-size: 1.2em;
+}
+
 #personal-statement {
   background-image: url('../img/code.jpg');
   background-repeat: no-repeat;
@@ -27,8 +36,6 @@ html,body
   text-align: center;
   min-height: 100vh;
 }
-
-
 
 .icon-links {
   font-size: 4em;
@@ -50,12 +57,22 @@ html,body
   margin-top: 5%;
 }
 
-#contact-form {
+#contact-section {
+  margin-top: 5%;
+  margin-bottom: 5%;
   padding: 2.5% 5%;
 }
+
+#contact-form {
+  margin-top: 2.5%;
+}
+
 
 @media only screen and (max-width: 650px) {
   .highlighted {
     border-radius: 0px;
+  }
+  html,body {
+    overflow-x: hidden;
   }
 }
